# pdb-parser

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  run_pipeline.sh
data/: instance_reorder.cfg  params.cfg  pdb_ids.txt
src/pdb_parser/: __init__.py  instance_reorder.py  main.py  pdb_parser.py
src/pdb_parser/geometry/: __init__.py  distance_geometry.py
src/pdb_parser/io/: __init__.py  distance_constraints.py  files.py  filtering.py  pdb_ops.py  validate.py
src/pdb_parser/pipeline/: __init__.py  parser_pipeline.py
src/pdb_parser/reordering/: __init__.py  vertex_ordering.py
src/pdb_parser/utils/: __init__.py  fs.py  inputs.py
