[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdb-parser"  # distribution name (can use hyphen)
version = "0.1.0"
description = "Lightweight PDB parser for Python -- focused on generating distance-constraint lists and torsion-angle data, tailored for Distance Geometry Problem (DGP) workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Wagner Alan Aparecido da Rocha" }]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
